alterações de hoje

--- a/aula04/ex003.html
+++ b/aula04/ex003.html
@@ -26,6 +26,8 @@
    var n1 = window.prompt ("DIGITE UM NÚMERO : ")
    var n2 = window.prompt("DIGITE OUTRO NÚMERO:")
    var soma = parseInt( n1)+ parseInt( n2)
+   var subtrair =parseInt (n1)- parseInt(n2)
+   window.alert("a subtraçao dos numeros é" + subtrair)
 window.alert ("a soma dos valores  acima é"+ soma)
 
 
